--- a/src/main/resources/com/example/dataeditor/View1.fxml
+++ b/src/main/resources/com/example/dataeditor/View1.fxml
@@ -3,22 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dataeditor.Controller1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: lightyellow;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dataeditor.Controller1">
    <children>
-      <TextField fx:id="rankText" layoutX="206.0" layoutY="47.0" />
-      <TextField fx:id="fullText" layoutX="206.0" layoutY="166.0" />
+      <TextField fx:id="rankText" editable="false" layoutX="206.0" layoutY="47.0" />
       <TextField fx:id="titleText" layoutX="206.0" layoutY="106.0" />
       <Label layoutX="86.0" layoutY="52.0" text="Rank" />
       <Label layoutX="86.0" layoutY="111.0" text="Title" />
       <Label layoutX="88.0" layoutY="184.0" prefHeight="17.0" prefWidth="84.0" text="Full Text" />
-      <Button fx:id="tableButton" layoutX="543.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTableView" text="Table" />
-      <Button fx:id="listButton" layoutX="495.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToListView" text="List" />
-      <Button fx:id="textButton" layoutX="437.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTextFieldView" text="Text" />
-      <ChoiceBox fx:id="sceneChoiceBox" layoutX="276.0" layoutY="370.0" onDragDetected="#changeScene" prefWidth="150.0" />
+      <Button fx:id="tableButton" layoutX="543.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTableView" style="-fx-background-color: yellow;" text="Table" />
+      <Button fx:id="listButton" layoutX="495.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToListView" style="-fx-background-color: yellow;" text="List" />
+      <Button fx:id="textButton" layoutX="437.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTextFieldView" style="-fx-background-color: yellow;" text="Text" />
+      <ChoiceBox fx:id="sceneChoiceBox" layoutX="276.0" layoutY="370.0" onDragDetected="#changeScene" prefWidth="150.0" style="-fx-background-color: yellow;" />
       <Button fx:id="previousButton" layoutX="26.0" layoutY="115.0" mnemonicParsing="false" onAction="#previousData" text="Prev" />
       <Button fx:id="nextButton" layoutX="416.0" layoutY="119.0" mnemonicParsing="false" onAction="#nextData" text="Next" />
+      <TextArea fx:id="fullText" layoutX="176.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
    </children>
 </Pane>
