--- a/src/main/resources/com/example/dataeditor/View2.fxml
+++ b/src/main/resources/com/example/dataeditor/View2.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dataeditor.Controller2">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: lightgreen;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dataeditor.Controller2">
    <children>
-      <ListView fx:id="theListView" layoutX="14.0" layoutY="14.0" prefHeight="337.0" prefWidth="570.0" />
-      <Button fx:id="tableButton" layoutX="543.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTableView" text="Table" />
-      <Button fx:id="listButton" layoutX="495.0" layoutY="370.0" mnemonicParsing="false" text="List" />
-      <Button fx:id="textButton" layoutX="437.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTextFieldView" text="Text" />
-      <ChoiceBox fx:id="sceneChoiceBox" layoutX="278.0" layoutY="370.0" onDragDetected="#changeScene" prefWidth="150.0" />
+      <ListView fx:id="theListView" editable="true" layoutX="14.0" layoutY="14.0" prefHeight="337.0" prefWidth="570.0" />
+      <Button fx:id="tableButton" layoutX="543.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTableView" style="-fx-background-color: green;" text="Table" textFill="WHITE" />
+      <Button fx:id="listButton" layoutX="495.0" layoutY="370.0" mnemonicParsing="false" style="-fx-background-color: green;" text="List" textFill="WHITE" />
+      <Button fx:id="textButton" layoutX="437.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchToTextFieldView" style="-fx-background-color: green;" text="Text" textFill="WHITE" />
+      <ChoiceBox fx:id="sceneChoiceBox" layoutX="278.0" layoutY="370.0" onDragDetected="#changeScene" prefWidth="150.0" style="-fx-background-color: green;" />
    </children>
 </Pane>
