Support Saving/Restoring edited data.

--- a/src/main/resources/com/example/dataeditor/View2.fxml
+++ b/src/main/resources/com/example/dataeditor/View2.fxml
@@ -5,18 +5,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: lightgreen;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dataeditor.Controller2_ListView">
    <children>
-      <ListView fx:id="theListView" editable="true" layoutX="14.0" layoutY="14.0" prefHeight="337.0" prefWidth="971.0" />
+      <ListView fx:id="theListView" editable="true" layoutX="14.0" layoutY="14.0" prefHeight="337.0" prefWidth="715.0" />
       <Button fx:id="tableButton" layoutX="937.0" layoutY="357.0" mnemonicParsing="false" onAction="#switchToTableView" style="-fx-background-color: green;" text="Table" textFill="WHITE" />
       <Button fx:id="listButton" layoutX="891.0" layoutY="357.0" mnemonicParsing="false" style="-fx-background-color: green;" text="List" textFill="WHITE" />
       <Button fx:id="textButton" layoutX="839.0" layoutY="357.0" mnemonicParsing="false" onAction="#switchToTextFieldView" style="-fx-background-color: green;" text="Text" textFill="WHITE" />
       <ChoiceBox fx:id="sceneChoiceBox" layoutX="676.0" layoutY="357.0" onDragDetected="#changeScene" prefWidth="150.0" style="-fx-background-color: green;" />
-      <TextField fx:id="rankEditor" layoutX="119.0" layoutY="358.0" onAction="#editRank" />
-      <TextField fx:id="titleEditor" layoutX="340.0" layoutY="358.0" onAction="#editTitle" />
-      <Label layoutX="46.0" layoutY="362.0" text="Rank" />
-      <Label layoutX="296.0" layoutY="363.0" text="Title" />
+      <TextField fx:id="rankEditor" layoutX="52.0" layoutY="359.0" onAction="#editRank" prefHeight="26.0" prefWidth="41.0" />
+      <TextField fx:id="titleEditor" layoutX="146.0" layoutY="359.0" onAction="#editTitle" prefHeight="26.0" prefWidth="335.0" />
+      <Label layoutX="14.0" layoutY="362.0" text="Rank" />
+      <Label layoutX="108.0" layoutY="364.0" text="Title" />
+      <ImageView fx:id="posterImageView" fitHeight="337.0" fitWidth="250.0" layoutX="739.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="addPosterButton" disable="true" layoutX="500.0" layoutY="360.0" mnemonicParsing="false" onAction="#addPosterImage" text="Add Poster" />
    </children>
 </Pane>
